# si_client_server_filetransferer

./: CMakeLists.txt  common.h  dumpManager.cpp  dumpManager.h  dumpedFile.cpp  dumpedFile.h  projectClient.cpp  projectServer.cpp  rawMemoryProcessor.cpp  rawMemoryProcessor.h  sharedMemoryClient.cpp  sharedMemoryClient.h  sharedMemoryClientServerBase.cpp  sharedMemoryClientServerBase.h  sharedMemoryServer.cpp  sharedMemoryServer.h
si_client/: CMakeLists.txt
si_server/: CMakeLists.txt
